# ManyToPlay

./: .gitignore  README.md  connect.py  install.sh  requirements.txt
controller/: CMakeLists.txt  devices.h  gameController.cpp  main.cpp
pyremoteplay/: __main__.py
